--- a/src/app/list-books/list-books.component.html
+++ b/src/app/list-books/list-books.component.html
@@ -1,3 +1,4 @@
+<app-search></app-search>
 <ul>
 <li *ngFor="let book of catalogBooks"><a routerLink="/book/{{book.id}}">{{book.title}}</a></li>
 </ul>
