--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,2 +1,20 @@
 <!-- <p>{{book.title}}</p> -->
-<button (click)="makeLease()"> Lease this book! </button>
+<mat-card class="example-card" routerLinke="willRouteTo">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>{{book.title}}</mat-card-title>
+    <mat-card-subtitle>{{book.author.name}}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p>
+      {{book.summary}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)="makeLease()">LEASE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
+
+<!-- <button (click)="makeLease()"> Lease this book! </button> -->
