--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,19 +1,25 @@
 <div id='container'>
 
-  <div id='search'>
+  <mat-progress-bar *ngIf="!catalogBooks" mode="indeterminate"></mat-progress-bar>
+
+  <div class="search-container">
+    <mat-form-field>
+      <input matInput placeholder="Title">
+    </mat-form-field>
+  </div>
+  <!-- <div id='search'>
     <input type='text' [formControl]='searchInput'>
     <button type='button'>Search</button>
-  </div>
+  </div> -->
 
   <div id='book-list-container' *ngIf='catalogBooks'>
-    <ul>
-      <li *ngFor='let book of catalogBooks'>
+    <app-book *ngFor="let b of catalogBooks" [book]="b" routerLink="/book/b.id"></app-book>
+    <!-- <li *ngFor='let book of catalogBooks'>
         <div routerLink='/book/{{book.id}}'>
           <div id='media-right'>
-              <span id='show-name'>{{book.title}} </span>
-            </div>
+            <span id='show-name'>{{book.title}} </span>
+          </div>
         </div>
-      </li>
-    </ul>
+      </li> -->
   </div>
 </div>
