Fix search functionality and fix router Link

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,5 +1,5 @@
 <!-- <p>{{book.title}}</p> -->
-<mat-card class="example-card" routerLinke="willRouteTo">
+<mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>{{book.title}}</mat-card-title>
