--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
 
   <div class="search-container">
     <mat-form-field>
-      <input matInput placeholder="Title">
+      <input matInput placeholder="Title" [formControl]="searchInput">
     </mat-form-field>
   </div>
   <!-- <div id='search'>
@@ -13,7 +13,7 @@
   </div> -->
 
   <div id='book-list-container' *ngIf='catalogBooks'>
-    <app-book *ngFor="let b of catalogBooks" [book]="b" routerLink="/book/b.id"></app-book>
+    <app-book *ngFor="let b of catalogBooks" [book]="b" routerLink="/book/{{b.id}}"></app-book>
     <!-- <li *ngFor='let book of catalogBooks'>
         <div routerLink='/book/{{book.id}}'>
           <div id='media-right'>
