--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,7 +1,7 @@
 <!-- <p>{{book.title}}</p> -->
 <mat-card class="example-card">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
+    <!-- <div mat-card-avatar class="example-header-image"></div> -->
     <mat-card-title>{{book.title}}</mat-card-title>
     <mat-card-subtitle>{{book.author.name}}</mat-card-subtitle>
   </mat-card-header>
