--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,25 +1,21 @@
 <div id='container'>
 
-  <mat-progress-bar *ngIf="!catalogBooks" mode="indeterminate"></mat-progress-bar>
+  <mat-progress-bar *ngIf="!catalogBooks" mode="indeterminate" color="warn"></mat-progress-bar>
 
-  <div class="search-container">
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Title" [formControl]="searchInput">
+    </mat-form-field>
+  </form>
+
+  <!-- <div class="search-container">
     <mat-form-field>
       <input matInput placeholder="Title" [formControl]="searchInput">
     </mat-form-field>
-  </div>
-  <!-- <div id='search'>
-    <input type='text' [formControl]='searchInput'>
-    <button type='button'>Search</button>
   </div> -->
 
   <div id='book-list-container' *ngIf='catalogBooks'>
     <app-book *ngFor="let b of catalogBooks" [book]="b" routerLink="/book/{{b.id}}"></app-book>
-    <!-- <li *ngFor='let book of catalogBooks'>
-        <div routerLink='/book/{{book.id}}'>
-          <div id='media-right'>
-            <span id='show-name'>{{book.title}} </span>
-          </div>
-        </div>
-      </li> -->
   </div>
+
 </div>
