--- a/src/app/book-snippet/book-snippet.component.html
+++ b/src/app/book-snippet/book-snippet.component.html
@@ -1,3 +1,7 @@
-<p>
-  book-snippet works!
-</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>{{book.title}}</mat-card-title>
+    <mat-card-subtitle>{{book.author.name}}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+</mat-card>
