--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,7 +5,7 @@
 
   <form class="example-form">
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Title" [formControl]="searchInput">
+      <input matInput placeholder="Search book by title" [formControl]="searchInput">
     </mat-form-field>
   </form>
 
