Change navbar color

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar">
+<mat-toolbar class="navbar" color="primary">
     <div>Librarian</div>
     <div>
         <span>Search(TODO)</span>
