--- a/src/app/book-snippet/book-snippet.component.css
+++ b/src/app/book-snippet/book-snippet.component.css
@@ -1,6 +1,14 @@
 .example-card {
   max-width: 200px;
-  margin-bottom: 20px;
+  margin: 0px 20px 0px 20px;
+}
+
+.example-title {
+  display: inline-block;
+  width: 180px;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
 }
 
 .example-header-image {
