--- a/src/app/book-snippet/book-snippet.component.html
+++ b/src/app/book-snippet/book-snippet.component.html
@@ -1,6 +1,6 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <mat-card-title>{{book.title}}</mat-card-title>
+    <mat-card-title class="example-title">{{book.title}}</mat-card-title>
     <mat-card-subtitle>{{book.author.name}}</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
