--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="navbar" color="primary">
-    <div>Librarian</div>
+    <div>LIBRARIAN</div>
     <div>
         <span>Contact</span>
         <span>Login/Register</span>
