--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 <div id='container'>
 
-  <mat-progress-bar *ngIf="!catalogBooks" mode="indeterminate" color="warn">
+  <mat-progress-bar *ngIf="!catalogBooks" mode="indeterminate" color="accent">
   </mat-progress-bar>
 
   <form class="example-form">
