--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -3,32 +3,36 @@
   flex-direction: column;
 }
 
+.search-container {
+  flex-direction: column;
+  background-color: #aaa;
+  align-items: center;
+  align-self: center;
+  padding: 100px 0px 100px 0px;
+}
+
 .example-form {
   min-width: 150px;
   max-width: 500px;
   width: 100%;
-<<<<<<< HEAD
   align-self: center;
-  margin: 80px 0px 80px 0px;
-=======
-  align-self:center;
->>>>>>> vasko-jovanoski
 }
+
 .example-full-width {
   width: 100%;
-
 }
+
 .search-results-container{
-  margin-top:45px;
+  margin-top:-19px;
   min-width: 150px;
   max-width: 500px;
   width: 100%;
-  align-self:center;
-  margin-bottom:50px;
+  align-self: center;
+  margin-bottom: 50px;
   background-color: white;
-  border:1px solid rgb(67, 67, 196);
-  position:absolute;
-  z-index:1000000;
+  border: 1px solid rgb(67, 67, 196);
+  position: absolute;
+  z-index: 1000000;
   border-top:0px;
 }
 ul{
