Added Popular Books functionality

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,5 +1,5 @@
 <!-- <p>{{book.title}}</p> -->
-<div>
+<div *ngIf="book">
   <mat-card class="example-card">
     <mat-card-header>
       <!-- <div mat-card-avatar class="example-header-image"></div> -->
