--- a/src/app/popular-books/popular-books.component.html
+++ b/src/app/popular-books/popular-books.component.html
@@ -1,3 +1,2 @@
-<p>
-  popular-books works!
-</p>
+<div><h3>Most popular</h3></div>
+<app-book-snippet-list [books]="popularBooks"></app-book-snippet-list>
