--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -8,7 +8,7 @@
   /* background-color: #aaa; */
   align-items: center;
   align-self: center;
-  width:100%;
+  width: 100%;
   min-width: 150px;
   max-width: 500px;
   padding: 50px 0px 50px 0px;
@@ -25,8 +25,8 @@
   width: 100%;
 }
 
-.search-results-container{
-  margin-top:-19px;
+.search-results-container {
+  margin-top: -19px;
   min-width: 150px;
   max-width: 500px;
   width: 100%;
@@ -36,29 +36,47 @@
   border: 1px solid rgb(67, 67, 196);
   position: absolute;
   z-index: 1000000;
-  border-top:0px;
+  border-top: 0px;
 }
-ul{
-  padding-left:0px;
-  margin-top:2px;
+
+ul {
+  padding-left: 0px;
+  margin-top: 2px;
+  display: flex;
+  flex-direction: column;
 }
 
 ul li {
   list-style-type: none;
-  color:black;
-  width:100%;
-  margin:0px;
-  padding:0px;
-
-}
-ul li:hover{
-  background:lightgray;
+  color: black;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
 }
 
-a:link,a,a:hover,a:visited{
-  color:black;
-  text-decoration: none;
+ul li:hover {
+  background: lightgray;
 }
-.book-author{
-  color:gray;
+
+.book-author {
+  color: gray;
+}
+
+.badge {
+  width: 50px;
+  height: 100px;
+}
+
+.badge img {
+  margin: auto;
+  padding: auto;
+  width: 50px;
+  height: 100px;
+}
+
+.book-text {
+  text-align: center;
+  align-self: center;
+  padding-left: 6px;
 }
