--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,8 +12,17 @@
 
     <div class="search-results-container" *ngIf="catalogBooks && term != '' && term !== undefined">
       <ul>
-        <li *ngFor="let book of catalogBooks"><a routerLink="/book/{{book.id}}">{{book.title}} <span
-          class="book-author"> by {{book.author.name}}</span></a> </li>
+        <li *ngFor="let book of catalogBooks" routerLink="/book/{{book.id}}">
+            <div class="badge">
+              <img mat-card-image src="{{book.cover}}">
+            </div>
+            <div class="book-text">
+              {{book.title}}
+              <span class="book-author">
+               by {{book.author.name}}
+              </span>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
