Change nav items color and cursor on :hover

--- a/src/app/popular-books/popular-books.component.html
+++ b/src/app/popular-books/popular-books.component.html
@@ -1,2 +1,4 @@
-<div><h3>Most popular</h3></div>
+<div class="mat-headline">
+  Most popular
+</div>
 <app-book-snippet-list [books]="popularBooks"></app-book-snippet-list>
