--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,7 +1,12 @@
 .navbar {
   justify-content: space-between;
+  cursor: default;
 }
 
 span {
-  padding-right: 1rem;
+  margin-right: 1rem;
+}
+
+span:hover {
+  color: #e91e63;
 }
