--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -1,12 +1,40 @@
-div {
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 40px 40px 40px 40px;
+  flex-direction: row;
+  padding: 40px 200px 40px 200px;
 }
 
-.example-card {
-  max-width: 400px;
+.media-right {
+  border: 2px solid darkgray;
+  border-radius: 2%;
+  padding-left: 35px;
+  border-left: 0px;
+  background-color: rgba(190, 170, 170, 0.932);
+}
+button{
+  background-color: #3f51b5;
+  color:white;
+  margin-right:20px;
+}
+h2 {
+  margin-top: 5px;
+}
+
+.graycolor {
+  color: #515151;
+}
+
+img {
+  border: 1px solid #ddd;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded border */
+  padding: 5px;
+  /* Some padding */
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
 /* .example-header-image {
