--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,19 @@
-<mat-toolbar class="navbar" color="primary">
-    <div>LIBRARIAN</div>
-    <div>
-        <span>Contact</span>
-        <span>Login/Register</span>
-    </div>
+<mat-toolbar class="navbar">
+  <img src="https://i.ibb.co/GCpSP0B/4354312.png" alt="Logo">
+  <div>
+    <a mat-button routerLink="/" color="accent">
+      <i class="material-icons">home</i>
+      <span id="sign-in">HOME</span>
+    </a>
+
+    <a mat-button routerLink="/" color="accent">
+      <i class="material-icons">contact_support</i>
+      <span id="sign-in">CONTACT</span>
+    </a>
+
+    <a mat-button routerLink="/" color="accent">
+      <i class="material-icons">account_circle</i>
+      <span id="sign-in">SIGN IN</span>
+    </a>
+  </div>
 </mat-toolbar>
