--- a/src/app/book-snippet/book-snippet.component.html
+++ b/src/app/book-snippet/book-snippet.component.html
@@ -3,5 +3,5 @@
     <mat-card-title class="example-title">{{book.title}}</mat-card-title>
     <mat-card-subtitle>{{book.author.name}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{book.cover}}" alt="Photo of a Shiba Inu">
+  <img class="object-fit_scale-down" mat-card-image src="{{book.cover}}" alt="Book Cover">
 </mat-card>
