--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,7 +5,7 @@
 
   <div class="search-container">
     <form class="example-form">
-      <mat-form-field class="example-full-width">
+      <mat-form-field class="example-full-width" color="accent">
         <input matInput placeholder="Search book by title" [formControl]="searchInput" class="search-input">
       </mat-form-field>
     </form>
