--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,16 +1,31 @@
 <!-- <p>{{book.title}}</p> -->
 <div *ngIf="book" class="container">
+
   <div class='media-left'>
     <img mat-card-image src="{{book.cover}}" >
   </div>
-  <div class='media-right'>
+
+  <div class='media-center'>
     <h2>{{book.title}}</h2>
     <b>Author:</b> <span class="graycolor"> {{book.author.name}}</span>
     <p>
       {{book.summary}}
     </p>
+
+  </div>
+
+  <div class='media-right'>
     <button mat-button (click)="makeLease()">LEASE</button>
     <button mat-button>SHARE</button>
+    <div class='similar-books' *ngIf='similarBooks' >
+      <mat-card class="example-card object-fit_scale-down" *ngFor="let b of similarBooks">
+        <mat-card-header>
+          <mat-card-title class="example-title">{{b.title}}</mat-card-title>
+          <mat-card-subtitle>{{b.author.name}}</mat-card-subtitle>
+        </mat-card-header>
+        <img class="object-fit_scale-down" mat-card-image src="{{b.cover}}" alt="Book Cover">
+      </mat-card>
+    </div>
   </div>
 </div>
 <!-- <button (click)="makeLease()"> Lease this book! </button> -->
