--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -64,7 +64,7 @@ ul li:hover {
   /* background: #3f51b5; */
   background: #ff4081;
   /* background: lightsteelblue; */
-  cursor: default;
+  cursor: pointer;
 }
 
 ul li:last-child {
