Added error message to UI on API fetch error

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -25,5 +25,6 @@
         </li>
       </ul>
     </div>
+    <div class='search-failed' *ngIf="searchFailed">Unable to fetch data, please come back later..</div>
   </div>
 </div>
