--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -6,7 +6,13 @@
 
 .media-center {
   padding-left: 35px;
+  display:flex;
+  flex-direction: column;
 
+}
+.buttons{
+  display:flex;
+  justify-content: space-between;
 }
 .media-right{
   margin-left:50px;
@@ -16,10 +22,9 @@
   margin-top:89px;
 }
 button{
-  background-color: #3f51b5;
+  background-color: #ff4081;
   color:white;
-  padding:0px 80px 0px 80px;
-  margin-bottom:30px;
+  padding:0px 50px 0px 50px;
 }
 h2 {
   margin-top: 5px;
