--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -17,14 +17,14 @@
   </div>
 
   <div class='media-right'>
-
+    <h6>You might also like these books</h6>
     <div class='similar-books' *ngIf='similarBooks' >
-      <mat-card class="example-card object-fit_scale-down" *ngFor="let b of similarBooks">
+      <mat-card class="example-card object-fit_scale-down" *ngFor="let b of similarBooks" routerLink="/book/{{b.id}}">
+          <img class="similar-book-img" mat-card-image src="{{b.cover}}" alt="Book Cover">
         <mat-card-header>
           <mat-card-title class="example-title">{{b.title}}</mat-card-title>
           <mat-card-subtitle>{{b.author.name}}</mat-card-subtitle>
         </mat-card-header>
-        <img class="object-fit_scale-down" mat-card-image src="{{b.cover}}" alt="Book Cover">
       </mat-card>
     </div>
   </div>
