--- a/src/app/admin-panel/admin-panel.component.css
+++ b/src/app/admin-panel/admin-panel.component.css
@@ -7,6 +7,7 @@ table{
 }
 table tbody tr{
   border:2px solid gray;
+  text-align: center;
 }
 
 thead{
@@ -15,4 +16,10 @@ thead{
 }
 .green{
   background-color: green;
+}
+.yellow{
+  background-color: rgb(201, 201, 19);
+}
+.red{
+  background-color: red;
 }
