--- a/src/app/admin-panel/admin-panel.component.css
+++ b/src/app/admin-panel/admin-panel.component.css
@@ -1,3 +1,6 @@
+.example-form, .search-container{
+  width:100%;
+}
 table{
   border:2px solid darkgray;
   border-left:0px;
@@ -15,11 +18,20 @@ thead{
   color:white;
 }
 .green{
-  background-color: green;
+  background-color: rgb(11, 172, 11);
 }
 .yellow{
   background-color: rgb(201, 201, 19);
 }
 .red{
   background-color: red;
+}
+.header-panel{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:0px 20px 0px 20px;
+}
+tr:hover{
+  box-shadow: 0 0 2px 1px darkblue;
 }
