--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,7 +1,15 @@
-<div>
+<div class='header-panel'>
   <h3>Leases</h3>
+  <span>Now: <u>{{currentDate | date:'dd/MM/yyyy HH:mm:ss'}}</u></span>
 </div>
-<div class='leases-container'>
+<div class="search-container">
+  <form class="example-form">
+    <mat-form-field class="example-full-width" color="accent">
+      <input matInput placeholder="Search by username" [formControl]="searchInput" class="search-input">
+    </mat-form-field>
+  </form>
+</div>
+<div class='leases-container' *ngIf="!searchFailed && !leasesFetchFailed">
   <table>
     <thead>
       <th>Lease ID</th>
@@ -17,13 +25,16 @@
         <td>{{l.id}}</td>
         <!-- <td>{{l.user.username}}</td> -->
         <td></td>
-        <td>{{l.timeOfLease}}</td>
-        <td>{{l.due_time}}</td>
+        <td>{{l.timeOfLease | date:'dd-MMM yyyy   HH:mm:ss'}}</td>
+        <td>{{l.due_time | date:'dd-MMM yyyy   HH:mm:ss'}}</td>
         <td>{{l.inventoryBook.catalogBook.title}}</td>
-        <td >{{l.returned}}</td>
+        <td *ngIf="l.returned">Yes</td>
+        <td *ngIf="!l.returned">No</td>
 
       </tr>
     </tbody>
   </table>
-Today date is: {{currentDate | date:'dd/MM/yyyy HH:mm:ss'}}
+</div>
+<div class='search-error' *ngIf="searchFailed">
+  <h4>Some error happened while fetching, please refresh the page and try again..</h4>
 </div>
