Logo routes to home page functionalit

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="navbar">
-  <img src="https://i.ibb.co/GCpSP0B/4354312.png" alt="Logo">
+  <img src="https://i.ibb.co/GCpSP0B/4354312.png" routerLink="/" class='logo' alt="Logo">
   <div>
     <a mat-button routerLink="/" color="accent">
       <i class="material-icons">home</i>
