--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -10,7 +10,7 @@
   </form>
 </div>
 <div class='leases-container' *ngIf="!searchFailed && !leasesFetchFailed">
-  <table>
+  <!-- <table>
     <thead>
       <th>Lease ID</th>
       <th>User</th>
@@ -21,9 +21,9 @@
 
     </thead>
     <tbody>
-      <tr *ngFor="let l of leases" [ngClass]="{'green': l.returned,'yellow':!l.returned,'red': isExpired(l)}">
+      <tr *ngFor="let l of leases" [ngClass]="{'green': l.returned,'normal':!l.returned,'red': isExpired(l)}">
         <td>{{l.id}}</td>
-        <!-- <td>{{l.user.username}}</td> -->
+        <td>{{l.user.username}}</td>
         <td></td>
         <td>{{l.timeOfLease | date:'dd-MMM yyyy   HH:mm:ss'}}</td>
         <td>{{l.due_time | date:'dd-MMM yyyy   HH:mm:ss'}}</td>
@@ -33,7 +33,40 @@
 
       </tr>
     </tbody>
+  </table> -->
+
+  <table mat-table [dataSource]="leases" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="timeOfLease">
+      <th mat-header-cell *matHeaderCellDef> Time of lease </th>
+      <td mat-cell *matCellDef="let element"> {{element.timeOfLease  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="due_time">
+      <th mat-header-cell *matHeaderCellDef> Due time </th>
+      <td mat-cell *matCellDef="let element"> {{element.due_time  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="inventoryBook">
+      <th mat-header-cell *matHeaderCellDef> Book name </th>
+      <td mat-cell *matCellDef="let element"> {{element.inventoryBook.catalogBook.title}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="returned">
+      <th mat-header-cell *matHeaderCellDef> Returned </th>
+      <td mat-cell *matCellDef="let element"> {{element.returned}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+
 </div>
 <div class='search-error' *ngIf="searchFailed">
   <h4>Some error happened while fetching, please refresh the page and try again..</h4>
