--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,73 +1,15 @@
 <div class='header-panel'>
   <h3>Leases</h3>
-  <span>Now: <u>{{currentDate | date:'dd/MM/yyyy HH:mm:ss'}}</u></span>
+  <div><b>Now: </b>{{currentDate | date:'dd MMM yyyy HH:mm:ss'}}</div>
 </div>
-<div class="search-container">
-  <form class="example-form">
-    <mat-form-field class="example-full-width" color="accent">
-      <input matInput placeholder="Search by username" [formControl]="searchInput" class="search-input">
-    </mat-form-field>
-  </form>
+
+<app-leases-list></app-leases-list>
+
+<div class='information'>
+  <span class='bg bg-red'></span> <span class='description'>Not returned & expired</span>
+  <span class='bg bg-green'></span> <span class='description'>Returned in time</span>
 </div>
-<div class='leases-container' *ngIf="!searchFailed && !leasesFetchFailed">
-  <!-- <table>
-    <thead>
-      <th>Lease ID</th>
-      <th>User</th>
-      <th>Time of lease</th>
-      <th>Due time</th>
-      <th>Book Leased</th>
-      <th>Returned?</th>
 
-    </thead>
-    <tbody>
-      <tr *ngFor="let l of leases" [ngClass]="{'green': l.returned,'normal':!l.returned,'red': isExpired(l)}">
-        <td>{{l.id}}</td>
-        <td>{{l.user.username}}</td>
-        <td></td>
-        <td>{{l.timeOfLease | date:'dd-MMM yyyy   HH:mm:ss'}}</td>
-        <td>{{l.due_time | date:'dd-MMM yyyy   HH:mm:ss'}}</td>
-        <td>{{l.inventoryBook.catalogBook.title}}</td>
-        <td *ngIf="l.returned">Yes</td>
-        <td *ngIf="!l.returned">No</td>
-
-      </tr>
-    </tbody>
-  </table> -->
-
-  <table mat-table [dataSource]="leases" class="mat-elevation-z8">
-
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="timeOfLease">
-      <th mat-header-cell *matHeaderCellDef> Time of lease </th>
-      <td mat-cell *matCellDef="let element"> {{element.timeOfLease  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="due_time">
-      <th mat-header-cell *matHeaderCellDef> Due time </th>
-      <td mat-cell *matCellDef="let element"> {{element.due_time  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
-    </ng-container>
-    <ng-container matColumnDef="inventoryBook">
-      <th mat-header-cell *matHeaderCellDef> Book name </th>
-      <td mat-cell *matCellDef="let element"> {{element.inventoryBook.catalogBook.title}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="returned">
-      <th mat-header-cell *matHeaderCellDef> Returned </th>
-      <td mat-cell *matCellDef="let element"> {{element.returned}} </td>
-    </ng-container>
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-
-</div>
 <div class='search-error' *ngIf="searchFailed">
   <h4>Some error happened while fetching, please refresh the page and try again..</h4>
 </div>
