--- a/src/app/leases-list/leases-list.component.html
+++ b/src/app/leases-list/leases-list.component.html
@@ -1,3 +1,42 @@
-<p>
-  leases-list works!
-</p>
+<div class="search-container">
+    <form class="example-form">
+      <mat-form-field class="example-full-width" color="accent">
+        <input matInput placeholder="Search by username" [formControl]="searchInput" class="search-input">
+      </mat-form-field>
+    </form>
+  </div>
+<div class='leases-container' *ngIf="!searchFailed && !leasesFetchFailed">
+
+    <table mat-table [dataSource]="leases" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id" >
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let lease"> {{lease.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="timeOfLease">
+        <th mat-header-cell *matHeaderCellDef> Time of lease </th>
+        <td mat-cell *matCellDef="let lease"> {{lease.timeOfLease  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="due_time">
+        <th mat-header-cell *matHeaderCellDef> Due time </th>
+        <td mat-cell *matCellDef="let lease"> {{lease.dueTime  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="inventoryBook">
+        <th mat-header-cell *matHeaderCellDef> Book name </th>
+        <td mat-cell *matCellDef="let lease"> {{lease.inventoryBook.catalogBook.title}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="returned">
+        <th mat-header-cell *matHeaderCellDef> Returned </th>
+        <td mat-cell *matCellDef="let lease">{{lease.returned ? 'Yes' : 'No'}}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'red': isExpired(row.due_time),'green':row.returned}" (click)='onLeaseClicked(row.id)'></tr>
+    </table>
+
+
+  </div>
