--- a/src/app/leases-list/leases-list.component.html
+++ b/src/app/leases-list/leases-list.component.html
@@ -14,6 +14,11 @@
       <td mat-cell *matCellDef="let lease"> {{lease.id}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="user">
+        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <td mat-cell *matCellDef="let lease"> {{lease.user? lease.user.username : '' }} </td>
+      </ng-container>
+
     <ng-container matColumnDef="timeOfLease">
       <th mat-header-cell *matHeaderCellDef> Time of lease </th>
       <td mat-cell *matCellDef="let lease"> {{lease.timeOfLease  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
@@ -36,7 +41,7 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-      [ngClass]="{'red': isExpired(row.due_time),'green':row.returned}" (click)='onLeaseClicked(row.id)'></tr>
+      [ngClass]="{'red': isExpired(row.due_time),'green':row.returned}" (click)='openDialog(row)'></tr>
   </table>
 
 
