--- a/src/app/modal-dialog/modal-dialog.component.css
+++ b/src/app/modal-dialog/modal-dialog.component.css
@@ -2,7 +2,7 @@
   background-color: lightgreen;
 }
 .red{
-  background-color: rgb(255, 11, 11);
+  background-color: lightgray;
 }
 .mat-dialog-content p .label{
 font-weight:bold;
