--- a/src/app/leases-list/leases-list.component.html
+++ b/src/app/leases-list/leases-list.component.html
@@ -5,9 +5,9 @@
     </mat-form-field>
   </form>
 </div>
-<div class='leases-container'>
+<div class='leases-container' *ngIf='!searchFailed && !leasesFetchFailed'>
 
-  <table mat-table [dataSource]="leases && leases.length>0?leases : allLeases" class="mat-elevation-z8">
+  <table mat-table [dataSource]="term=='' ? allLeases : leases" class="mat-elevation-z8">
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -15,9 +15,9 @@
     </ng-container>
 
     <ng-container matColumnDef="user">
-        <th mat-header-cell *matHeaderCellDef> Username </th>
-        <td mat-cell *matCellDef="let lease"> {{lease.user? lease.user.username : '' }} </td>
-      </ng-container>
+      <th mat-header-cell *matHeaderCellDef> Username </th>
+      <td mat-cell *matCellDef="let lease"> {{lease.user? lease.user.username : '' }} </td>
+    </ng-container>
 
     <ng-container matColumnDef="timeOfLease">
       <th mat-header-cell *matHeaderCellDef> Time of lease </th>
@@ -41,8 +41,15 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-      [ngClass]="{'red': isExpired(row.due_time),'green':row.returned}" (click)='openDialog(row)'></tr>
+      [ngClass]="{'red': isLeaseExpired(row.due_time),'green':row.returned}" (click)='openDialog(row)'></tr>
   </table>
 
+  <div class='information'>
+    <span class='bg bg-red'></span> <span class='description'>Not returned & expired</span>
+    <span class='bg bg-green'></span> <span class='description'>Returned in time</span>
+  </div>
+</div>
 
+<div class='search-error' *ngIf="searchFailed || leasesFetchFailed">
+  <h4>Some error happened while fetching, please refresh the page and try again..</h4>
 </div>
