--- a/src/app/modal-dialog-user/modal-dialog-user.component.html
+++ b/src/app/modal-dialog-user/modal-dialog-user.component.html
@@ -5,6 +5,6 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()" class="red">No</button>
-  <button mat-button [mat-dialog-close]="data.id" cdkFocusInitial class="green">Yes</button>
+  <button mat-button [mat-dialog-close]="data.id" cdkFocusInitial class="pink">Yes</button>
+  <button mat-stroked-button (click)="onNoClick()">No</button>
 </div>
