--- a/src/app/modal-dialog-admin/modal-dialog.component.html
+++ b/src/app/modal-dialog-admin/modal-dialog.component.html
@@ -2,8 +2,8 @@
 <div mat-dialog-content>
   <p><span class='label'>Book leased: </span> {{data.bookTitle}}</p>
   <p><span class='label'>User: </span>{{data.user}}</p>
-  <p><span class='label'>Time of leasing: </span>{{data.timeOfLease}}</p>
-  <p><span class='label'>Due time:</span> {{data.dueTime}}</p>
+  <p><span class='label'>Time of leasing: </span>{{data.timeOfLease | date:'dd MMM yyyy HH:mm:ss'}}</p>
+  <p><span class='label'>Due time:</span> {{data.dueTime | date:'dd MMM yyyy HH:mm:ss'}}</p>
   <p><span class='label'>Returned:</span> {{data.returned ? ' Yes' : ' No'}}</p>
 
   <!-- <p>Set this book as returned?</p>
