Implemented Available to lease' functionality on frontend

--- a/src/app/leases-list/leases-list.component.html
+++ b/src/app/leases-list/leases-list.component.html
@@ -44,13 +44,11 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-      [ngClass]="{
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{
         'red': isLeaseExpired(row.dueTime),
         'green':row.returned,
         'hide':hideFinishedLeases && row.returned
-      }"
-      (click)='openDialog(row)'></tr>
+      }" (click)='openDialog(row)'></tr>
   </table>
 
   <div class='information'>
