--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -13,6 +13,7 @@
     </p>
     <div class='buttons'>
       <button mat-button (click)="openDialog(book)">LEASE</button>
+      <span id='is-available' [ngClass]="{'success': book.available,'failed': !book.available}">{{book.available ? 'Available': 'Not available..'}}</span>
       <button mat-button>SHARE</button>
     </div>
     <div class='lease-info'>
