Split leases component, refactored

--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -3,5 +3,5 @@
   <div><b>Now: </b>{{currentDate | date:'dd MMM yyyy HH:mm:ss'}}</div>
 </div>
 
-<app-leases-list></app-leases-list>
+<app-search-leases></app-search-leases>
 
