--- a/src/app/leases-list/leases-list.component.html
+++ b/src/app/leases-list/leases-list.component.html
@@ -1,17 +1,7 @@
-<div class="search-container">
-  <form class="example-form">
-    <mat-form-field class="example-full-width" color="accent">
-      <input matInput placeholder="Search by email" [formControl]="searchInput" class="search-input">
-    </mat-form-field>
 
-  </form>
-  <mat-checkbox [(ngModel)]="hideFinishedLeases">Hide finished leases</mat-checkbox>
+<div class='leases-container'>
 
-
-</div>
-<div class='leases-container' *ngIf='!leasesFetchFailed'>
-
-  <table mat-table [dataSource]="term=='' ? allLeases : searchLeases" class="mat-elevation-z8">
+  <table mat-table [dataSource]="leases" class="mat-elevation-z8">
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> ID </th>
@@ -55,6 +45,4 @@
   </div>
 </div>
 
-<div class='search-error' *ngIf="leasesFetchFailed">
-  <h4>Some error happened while fetching, please refresh the page and try again..</h4>
-</div>
+
